made changes to logic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <main>
         <div class="container">
-            <div id="viewScores"><button value="totalScores">View HighScores</button></div>
             <div id="time">Time: </div>
             <div id="timeRemaining">75</div>
         </div>
@@ -66,10 +65,14 @@
 
             <div id="scoresList" style="display:none;">
                 <h3>HighScores</h3>
-                <p id="showList"></p>
+                <div id="showList"></div>
                 <button id="goback">Go Back</button>
                 <button id="clearscores">Clear Highscores</button>
+                <button id="viewfinalscores">View HighScores</button>
+                <button id="hidefinalscores">Hide HighScores</button>
             </div>
+
+            <div id="showFinalScores"></div>
             
             <div id="correct" style="display:none">
                 <hr>
