changed quiz name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div id="questions">
             <div id="intro" style="display:show;">
-                <h2>Coding Quiz Challenge</h2>
+                <h2>JavaScript Quiz Challenge</h2>
                 <pre>Try to answer the following code related questions within the 
     time limit. Keep in mind that incorrect answers 
     will penalize your scoretime by ten seconds.</pre>
