added comments in all the files

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
             <div id="timeRemaining">75</div>
         </div>
         <div id="questions">
+            <!--Introduction part-->
             <div id="intro" style="display:show;">
                 <h2>JavaScript Quiz Challenge</h2>
-                <pre>Try to answer the following code related questions within the 
+                <pre>Try to answer the following javascript related questions within the 
     time limit. Keep in mind that incorrect answers 
     will penalize your scoretime by ten seconds.</pre>
                 <button id="start">Start Quiz</button>
             </div>
-            
+             <!--Questions in the quiz-->
             <div id="dataTypes" style="display:none;"> 
                 <p>Commonly used datatypes DO NOT include _____:</p><br>
                 <button id="strings">1: strings</button><br>
